<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call_us"
        android:orderInCategory="100"
        android:title="@string/action_call"
        android:icon="@drawable/ic_call_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_mail_us"
        android:orderInCategory="100"
        android:title="@string/action_mail_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:title="@string/action_faq"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="100"
        android:title="@string/action_rate_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_invite_and_earn"
        android:orderInCategory="100"
        android:title="@string/action_invite_and_earn"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
